--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
 
 <p><b>No data is collected.</b></p>
+<p><b>For support reach out to mumMYmenuApp@gmail.com.</b></p>
 <p><b>Nessun dato viene salvato.</b></p>
+<p><b>Per supporto contattare mumMYmenuApp@gmail.com.</b></p>
 
 </body>
 </html>
